# LINDA

./: .gitignore  CMakeLists.txt  README.md  main.c  references_useful_etc.txt
include/: encoding.h  laser_transmit.h
lib/: encoding.c  encoding.h  laser_transmit.c
src/: encoding.c
